<resources>
    <string name="app_name">MiniDouyin</string>
    <string name="request_data">request data</string>
    <string name="requesting">requesting...</string>

    <string name="select_an_image">select an image</string>
    <string name="select_a_video">select a video</string>
    <string name="post_it">post it!</string>
    <string name="refresh_feed">refresh feed</string>


    <!-- Main -->
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="refreshBtn">Refresh!</string>

    <!-- Debug -->
    <string name="print_absolute_path">Print absolute path</string>
    <string name="request_storage_permission">Request Storage Permission</string>
    <string name="write_to_file">Write to files</string>
    <string name="write_to_file_hint">Display your content here</string>

    <!-- Note -->
    <string name="take_a_picture">Picture</string>
    <string name="record">Record</string>
    <string name="zoom">Zoom</string>
    <string name="post">Post</string>
    <string name="picture">Picture</string>
    <string name="missinghint">Take a picture/video first</string>
    <string name="posting">Posting...</string>


    <string name="success_try_refresh">Success! Go check in the Main Page</string>
    <string name="facing">Facing</string>



    <!-- Note -->
    <string name="take_a_note">Take a note</string>
    <string name="confirm">Confirm</string>


</resources>
