<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_facing"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/facing"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_picture"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/picture" />

        <Button
            android:id="@+id/btn_record"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/record" />

        <Button
            android:id="@+id/btn_zoom"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/zoom" />

        <Button
            android:id="@+id/btn_post"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/post" />
    </LinearLayout>
</RelativeLayout>
